[package]
name = "tests"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
workspaces = "0.1.1"

[[example]]
name = "status_message"
path = "src/status_message.rs"

[[example]]
name = "nft_make_collection"
path = "src/nft/nft_make_collection.rs"

[[example]]
name = "fpo_buy_now_only"
path = "src/marketplace/fpo_buy_now_only.rs"
