[package]
name = "tests"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
workspaces = "0.4.0"
colored = "2.0.0"

# NFT Contract

[[example]]
name = "nft_make_collection"
path = "src/nft/nft_make_collection.rs"


# Marketplace Contract 

[[example]]
name = "fpo_buy_now_only_add"
path = "src/marketplace/fpo_buy_now_only_add.rs"

[[example]]
name = "fpo_buy_now_only_buy"
path = "src/marketplace/fpo_buy_now_only_buy.rs"

[[example]]
name = "fpo_buy_now_only_conclude"
path = "src/marketplace/fpo_buy_now_only_conclude.rs"

[[example]]
name = "fpo_add_accepting_proposals"
path = "src/marketplace/fpo_accepting_proposals_add.rs"



